--- a/tema1a/src/Makefile
+++ b/tema1a/src/Makefile
@@ -1,6 +1,7 @@
 PROJECT=tema1
-SOURCES=utils/MapWorker/map_worker.cpp utils/ReduceWorker/reduce_worker.cpp \
-utils/SharedResources/resources.cpp utils/MapReduceIntermediary/map_containers.cpp
+SOURCES=utils/helpers.cpp utils/MapWorker/map_worker.cpp \
+utils/SharedResources/resources.cpp utils/MapReduceIntermediary/map_containers.cpp \
+utils/ReduceWorker/reduce_worker.cpp
 LIBPATHS=pthread
 INCPATHS=utils/
 CFLAGS=-c -Wall -Werror -Wno-error=unused-variable
@@ -16,7 +17,7 @@ LIBFLAGS=$(foreach TMP,$(LIBPATHS),-L$(TMP))
 
 # Set up the output file names for the different output types
 #BINARY=$(PROJECT)
-
+build: all
 all: $(SOURCES) tema1
 
 #$(BINARY): $(OBJECTS)
@@ -24,7 +25,7 @@ tema1: $(OBJECTS)
 	$(CC) $(DEBUGFLAGS) $(LIBFLAGS) $(INCFLAGS) main.cpp $(OBJECTS) $(LDFLAGS) -o $@
 
 .cpp.o:
-	$(CC) $(DEBUGFLAGS) $(LIBFLAGS) $(INCFLAGS) $(CFLAGS) -fPIC $< -o $@
+	$(CC) $(DEBUGFLAGS) $(LIBFLAGS) $(INCFLAGS) $(CFLAGS) $< -o $@
 
 clean:
 	rm -f $(OBJECTS) tema1
